--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,35 @@ select {
   box-sizing: border-box;
 }
 
+.date-picker > * {
+  padding: 10px;
+  margin: 10px;
+}
+
+button {
+  background-color: #888;
+  color: #eee;
+  border: none;
+  padding: 10px 15px;
+  margin: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #61dafbaa;
+  color: #111;
+}
+
+.date-picker > span {
+  width: 120px;
+  text-align: center;
+  font-size: 16px;
+  padding: 5px;
+}
+
 @media (max-width: 768px) {
   .column {
     flex: 1 1 calc(50% - 16px); /* 2 columns on smaller screens */
